# Arwen_Elrond_IPC

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dune-project  my_project.opam
_customstk_out/: _beforeweakening.json  _consistent.json  _consistent_stat.json
ipc/: dune  ipc.ml
src/: assertion_parser.lalrpop  assertion_parser.rs  ipc.rs  ipc_assertion.rs  lib.rs  main.rs  program_parser.lalrpop  program_parser.rs
src/snapshots/: arwen_elrond_ipc__bankersq_assertion1_parser.snap  arwen_elrond_ipc__bankersq_assertion2_parser.snap  arwen_elrond_ipc__batchedq_assertion1_parser.snap  arwen_elrond_ipc__batchedq_assertion2_parser.snap  arwen_elrond_ipc__customstk_assertion1_parser.snap  arwen_elrond_ipc__customstk_assertion2_parser.snap  arwen_elrond_ipc__customstk_assertion3_parser.snap  arwen_elrond_ipc__motivating_example_assertion_parser.snap  arwen_elrond_ipc__pred_parser_1.snap  arwen_elrond_ipc__pred_parser_2.snap  arwen_elrond_ipc__pred_parser_3.snap  arwen_elrond_ipc__pred_parser_4.snap  arwen_elrond_ipc__pred_parser_5.snap  arwen_elrond_ipc__simple_exp_parser_1.snap  arwen_elrond_ipc__splayhp_assertion1_parser.snap  arwen_elrond_ipc__splayhp_assertion2_parser.snap  arwen_elrond_ipc__splayhp_assertion3_parser.snap
stub/: dune  stub.ml
tests/: assertion_parser.rs  echo_stream.py  messages.rs
tests/snapshots/: assertion_parser__assertion_parser_1.snap  assertion_parser__assertion_parser_2.snap  assertion_parser__assertion_parser_3.snap  assertion_parser__assertion_parser_4.snap  assertion_parser__assertion_parser_5.snap  parser__lit_false.snap  (+21 more)
