[package]
name = "arwen_elrond_ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = "1.31.0"
interactive_process = "0.1.3"
itertools = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = { version = "0.20", features = ["lexer", "unicode"] }

[dev-dependencies]
serial_test = "2.0.0"
